--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <section>
         <div id="title">
-          <h1>Resharper.xunittestrunner</h1>
+          <h1>ReSharper xUnit.net test runner</h1>
           <p>xUnit .net (http://xunit.codeplex.com) runner for ReSharper 6 and above</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/hazzik">hazzik</a></span>
