--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Resharper.xunittestrunner by hazzik</title>
+    <title>ReSharper xUnit.net test runner</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -21,8 +21,9 @@
       <div id="header">
         <nav>
           <li class="fork"><a href="https://github.com/hazzik/ReSharper.XUnitTestRunner">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/hazzik/ReSharper.XUnitTestRunner/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/hazzik/ReSharper.XUnitTestRunner/tarball/master">TAR</a></li>
+          <li class="downloads"><a href="https://github.com/downloads/hazzik/ReSharper.XUnitTestRunner/ReSharper.XUnitTestRunner.6.0-201206031735.exe">R# 6.0</a></li>
+          <li class="downloads"><a href="https://github.com/downloads/hazzik/ReSharper.XUnitTestRunner/ReSharper.XUnitTestRunner.6.1-201206031735.exe">R# 6.1</a></li>
+          <li class="downloads"><a href="https://github.com/downloads/hazzik/ReSharper.XUnitTestRunner/ReSharper.XUnitTestRunner.7.0-201206031735.exe">R# 7.0</a></li>
           <li class="title">DOWNLOADS</li>
         </nav>
       </div><!-- end header -->
