Update downloads links

--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@
       <div id="header">
         <nav>
           <li class="fork"><a href="https://github.com/hazzik/ReSharper.XUnitTestRunner">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/downloads/hazzik/ReSharper.XUnitTestRunner/ReSharper.XUnitTestRunner.6.0-201209300119.exe">R# 6.0</a></li>
-          <li class="downloads"><a href="https://github.com/downloads/hazzik/ReSharper.XUnitTestRunner/ReSharper.XUnitTestRunner.6.1-201209300119.exe">R# 6.1</a></li>
-          <li class="downloads"><a href="https://github.com/downloads/hazzik/ReSharper.XUnitTestRunner/ReSharper.XUnitTestRunner.7.0-201209300119.exe">R# 7.0</a></li>
-          <li class="downloads"><a href="https://github.com/downloads/hazzik/ReSharper.XUnitTestRunner/ReSharper.XUnitTestRunner.7.1-201209300119.exe">R# 7.1</a></li>
+          <li class="downloads"><a href="./downloads/ReSharper.XUnitTestRunner.6.0-201304222145.exe">R# 6.0</a></li>
+          <li class="downloads"><a href="./downloads/ReSharper.XUnitTestRunner.201304222145.exe">R# 6.1 - 8.0</a></li>
           <li class="title">DOWNLOADS</li>
         </nav>
       </div>
