--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
         <nav>
           <li class="fork"><a href="https://github.com/hazzik/ReSharper.XUnitTestRunner">View On GitHub</a></li>
           <li class="downloads"><a href="./downloads/ReSharper.XUnitTestRunner.6.0-201304222145.exe">R# 6.0</a></li>
-          <li class="downloads"><a href="./downloads/ReSharper.XUnitTestRunner.201304222145.exe">R# 6.1 - 8.0</a></li>
+          <li class="downloads"><a href="./downloads/ReSharper.XUnitTestRunner-201304222145.exe">R# 6.1 - 8.0</a></li>
           <li class="title">DOWNLOADS</li>
         </nav>
       </div>
-
     <div class="wrapper">
 
       <section>
